3.2.0:
- New: additional color variants
- Improved: wallpaper thumbnail
- Improved: appearance and behavior of bottom sheets and system bars
- Improved: internal resource management
- Fixed: clipped text in changelog
- Fixed: GPU icon in settings
- Fixed: corner radius of selection circles for older Android versions

3.1.0:
- New: switch to turn off hardware acceleration (only useful if the wallpaper crashes)
- Improved: wallpaper and theme selection appearance
- Improved: text of warnings
- Fixed: hopefully some crashes

3.0.1:
- Improved: text and descriptions

3.0.0:
- New: completely rewritten rendering engine (much more efficient and faster)
- New: "organic" doodle wallpaper
- New: hardware acceleration for devices with Android 8 and higher
- Improved: settings style and layout

2.6.1:
- Improved: applying preferences unrelated to color or size now is more efficient
- Fixed: preferences were sometimes not applied to wallpaper
- Fixed: a few potential crashes

2.6.0:
- New: zoom-in animation when unlocking
- New: changelog is shown after update
- New: feedback and GitHub link in app
- Improved: max. shape size now bigger for tablets
- Improved: increased max. parallax strength
- Improved: wallpapers optimized for landscape mode and tablets
- Improved: general information and descriptions
- Fixed: dark mode not adopting from system
- Fixed: laggy animations after resizing shapes in settings

2.5.0:
- New: support for zoom effect on Android 11
- Improved: show warning when default launcher is TouchWiz
- Improved: sliders for customization
- Improved: haptic feedback in settings
- Improved: animation efficiency by using frame rate of the device

2.4.0:
- New: haptic feedback in settings
- Improved: settings interface
- Fixed: crash on boot caused by missing access to preferences

2.3.0:
- New: Jost* typeface
- New: animated splash screen in settings
- New: immersive fullscreen experience in settings
- New: medium size option
- New: start with boot