@@ -26,7 +26,7 @@
   android:orientation="vertical">
 
   <TextView
-    style="@style/Widget.Doodle.TextView.Toolbar.BottomSheet"
+    style="@style/Widget.Doodle.TextView.Toolbar.BottomSheet.Center"
     android:text="@string/title_feedback" />
 
   <View
