@@ -232,8 +232,16 @@
     <item name="android:layout_height">?android:actionBarSize</item>
     <item name="android:paddingStart">16dp</item>
     <item name="android:paddingEnd">16dp</item>
+    <item name="android:gravity">center_vertical</item>
+  </style>
+
+  <style
+    name="Widget.Doodle.TextView.Toolbar.BottomSheet.Center"
+    parent="Widget.Doodle.TextView.Toolbar.BottomSheet">
+    <item name="android:layout_width">wrap_content</item>
     <item name="android:gravity">center</item>
     <item name="android:textAlignment">center</item>
+    <item name="android:layout_gravity">center</item>
   </style>
 
   <style name="Widget.Doodle.TextView.Category" parent="Widget.Doodle.TextView">
